limit scope of github actions
Signed-off-by: Karsten Knese <karsten.knese@us.bosch.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,10 @@
 name: Integration build rmw_iceoryx
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
 
 jobs:
   build:
