add new functions to rmw
Signed-off-by: Karsten Knese <karsten.knese@us.bosch.com>

--- a/rmw_iceoryx_cpp/CMakeLists.txt
+++ b/rmw_iceoryx_cpp/CMakeLists.txt
@@ -78,9 +78,11 @@ add_library(rmw_iceoryx_cpp SHARED
   src/rmw_client.cpp
   src/rmw_compare_guids_equal.cpp
   src/rmw_count.cpp
+  src/rmw_event.cpp
   src/rmw_get_gid_for_publisher.cpp
   src/rmw_get_implementation_identifier.cpp
   src/rmw_get_serialization_format.cpp
+  src/rmw_get_topic_endpoint_info.cpp
   src/rmw_guard_condition.cpp
   src/rmw_init.cpp
   src/rmw_logging.cpp
