force lower case for ros package name (#12)
* force lower case for package name

To be able to use `iceoryx`s native applications with `ros 2` based applications the package name defined from service and event name must be valid for `ros 2` as package name. Forcing lowercase in the package name only partially fixes this issue. As far as I know there are changes planned regarding types in `iceoryx`, so I would propose this fix, till we can focus on the new type handling.

Signed-off-by: Johannes Jeising <Johannes.Jeising@de.bosch.com>

* apply ros2 uncrustify config and add missing std

Signed-off-by: Johannes Jeising <Johannes.Jeising@de.bosch.com>

* make delimiter msg a constant

Signed-off-by: Johannes Jeising <Johannes.Jeising@de.bosch.com>

* add basic test infrastructure and fix linting

Signed-off-by: Johannes Jeising <Johannes.Jeising@de.bosch.com>

* fix uncrustify

Signed-off-by: Johannes Jeising <Johannes.Jeising@de.bosch.com>

* make name conversion testable

Signed-off-by: Johannes Jeising <Johannes.Jeising@de.bosch.com>

* add basic tests and fix review comments

Signed-off-by: Johannes Jeising <Johannes.Jeising@de.bosch.com>

* add comments

Signed-off-by: Johannes Jeising <Johannes.Jeising@de.bosch.com>

* fix uncrustify

Signed-off-by: Johannes Jeising <Johannes.Jeising@de.bosch.com>

* add badges

Signed-off-by: Johannes Jeising <Johannes.Jeising@de.bosch.com>

* remove duplicated string

Signed-off-by: Johannes Jeising <Johannes.Jeising@de.bosch.com>

* streamline function names

Signed-off-by: Johannes Jeising <Johannes.Jeising@de.bosch.com>

--- a/rmw_iceoryx_cpp/package.xml
+++ b/rmw_iceoryx_cpp/package.xml
@@ -19,6 +19,7 @@
   <depend>rosidl_typesupport_introspection_c</depend>
   <depend>rosidl_typesupport_introspection_cpp</depend>
 
+  <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
