name packages to test
Signed-off-by: Karsten Knese <karsten.knese@us.bosch.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,3 +32,5 @@ jobs:
           ref: master
       - name: Build & Test
         uses: ros-tooling/action-ros-ci@0.0.13
+        with:
+          package-name: rmw_iceoryx_cpp iceoryx_ros2_bridge
