--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,15 +20,11 @@ jobs:
         uses: ros-tooling/setup-ros@0.0.15
       - name: Install Iceoryx Dependencies
         run: sudo apt-get update && sudo apt-get install -y cmake libacl1-dev libncurses5-dev pkg-config
-      - name: Checkout Sources
-        uses: actions/checkout@v2
-        with:
-          path: src/rmw_iceoryx
       - name: Checkout Iceoryx
         uses: actions/checkout@v2
         with:
           repository: eclipse/iceoryx
-          path: src/iceoryx
+          path: ros_ws/src
           ref: master
       - name: Build & Test
         uses: ros-tooling/action-ros-ci@0.0.13
