--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,8 @@ jobs:
         uses: ros-tooling/setup-ros@0.0.15
       - name: Install Iceoryx Dependencies
         run: sudo apt-get update && sudo apt-get install -y cmake libacl1-dev libncurses5-dev pkg-config
-      - name: Checkout Iceoryx
-        uses: actions/checkout@v2
-        with:
-          repository: eclipse/iceoryx
-          path: ros_ws/src
-          ref: master
       - name: Build & Test
-        uses: ros-tooling/action-ros-ci@0.0.13
+        uses: karsten1987/action-ros-ci@additional_repos_file
         with:
           package-name: rmw_iceoryx_cpp iceoryx_ros2_bridge
+          additional-vcs-repo-file-url: "${{ github.workspace }}/ros_ws/src/rmw_iceoryx/.github/workflows/additional_repos.repos"
