--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,6 @@ jobs:
         uses: ros-tooling/action-ros-ci@tmoulard/vcs
         with:
           package-name: rmw_iceoryx_cpp iceoryx_ros2_bridge
-          vcs-repo-file-url: ["${{ github.workspace }}/ros_ws/src/rmw_iceoryx/.github/workflows/additional_repos.repos", "https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos"]
+          vcs-repo-file-url: |
+            "${{ github.workspace }}/ros_ws/src/rmw_iceoryx/.github/workflows/additional_repos.repos"
+            "https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos"
