prefix with file
Signed-off-by: Karsten Knese <karsten.knese@us.bosch.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,5 @@ jobs:
         with:
           package-name: rmw_iceoryx_cpp iceoryx_ros2_bridge
           vcs-repo-file-url: |
-            ${{ github.workspace }}/ros_ws/src/rmw_iceoryx/.github/workflows/additional_repos.repos
+            file://${{ github.workspace }}/ros_ws/src/rmw_iceoryx/.github/workflows/additional_repos.repos
             https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos
