--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - master
   pull_request:
+  schedule:
+    - cron: '0 3 * * *'
 
 jobs:
   build:
@@ -12,30 +14,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          # os: [macOS-latest, ubuntu-18.04, windows-latest]
           os: [ubuntu-18.04]
-          ros: [eloquent]
     steps:
       - name: Setup ROS
-        uses: ros-tooling/setup-ros@0.0.11
-        with:
-          required-ros-distributions: ${{ matrix.ros }}
-        # To build against multiple OSs dependencies installation needs to be OS specific
+        uses: ros-tooling/setup-ros@0.0.15
       - name: Install Iceoryx Dependencies
         run: sudo apt-get update && sudo apt-get install -y cmake libacl1-dev libncurses5-dev pkg-config
-      - name: Checkout Sources
-        uses: actions/checkout@v2
+      - name: Build & Test
+        uses: ros-tooling/action-ros-ci@master
         with:
-          path: src/rmw_iceoryx
-      - name: Checkout Iceoryx
-        uses: actions/checkout@v2
-        with:
-          repository: eclipse/iceoryx
-          path: src/iceoryx
-          ref: master
-      - name: Trigger Build
-        run: "source /opt/ros/${{ matrix.ros }}/setup.bash && colcon build"
-      - name: Execute Tests
-        run: "source /opt/ros/${{ matrix.ros }}/setup.bash && colcon test"
-      - name: Show Test Results
-        run: "source /opt/ros/${{ matrix.ros }}/setup.bash && colcon test-result --verbose"
+          package-name: rmw_iceoryx_cpp iceoryx_ros2_bridge
+          vcs-repo-file-url: |
+            https://gist.githubusercontent.com/Karsten1987/1723f219bb5aa5b81355c7eb1477f867/raw/9dc4d877f6fd0f862070516febdbddea28723b5c/iceoryx.repos
+            https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos
