--- a/rmw_iceoryx_cpp/package.xml
+++ b/rmw_iceoryx_cpp/package.xml
@@ -14,8 +14,8 @@
   <depend>rcutils</depend>
   <depend>rmw</depend>
   <depend>rmw_implementation</depend>
-  <depend>rosidl_generator_c</depend>
-  <depend>rosidl_generator_cpp</depend>
+  <depend>rosidl_runtime_c</depend>
+  <depend>rosidl_runtime_cpp</depend>
   <depend>rosidl_typesupport_cpp</depend>
   <depend>rosidl_typesupport_introspection_c</depend>
   <depend>rosidl_typesupport_introspection_cpp</depend>
