--- a/rmw_iceoryx_cpp/CMakeLists.txt
+++ b/rmw_iceoryx_cpp/CMakeLists.txt
@@ -142,9 +142,15 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 
   find_package(ament_cmake_gtest REQUIRED)
-  ament_add_gtest(${PROJECT_NAME}_tests test/iceoryx_name_conversion_test.cpp)
+  find_package(test_msgs REQUIRED)
+  ament_add_gtest(test_name_conversion test/iceoryx_name_conversion_test.cpp)
+  target_link_libraries(test_name_conversion ${PROJECT_NAME})
 
-  target_link_libraries(${PROJECT_NAME}_tests ${PROJECT_NAME})
+  ament_add_gtest(test_message_serialization test/iceoryx_serialization_test.cpp)
+  target_link_libraries(test_message_serialization ${PROJECT_NAME})
+  ament_target_dependencies(test_message_serialization
+    test_msgs
+  )
 endif()
 
 ament_export_include_directories(include)
