--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install Iceoryx Dependencies
         run: sudo apt-get update && sudo apt-get install -y cmake libacl1-dev libncurses5-dev pkg-config
       - name: Build & Test
-        uses: ros-tooling/action-ros-ci@master
+        uses: ros-tooling/action-ros-ci@0.0.17
         with:
           package-name: rmw_iceoryx_cpp iceoryx_ros2_bridge
           vcs-repo-file-url: |
