source-ros-binary-installation
Signed-off-by: Karsten Knese <karsten.knese@us.bosch.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,6 @@ jobs:
         uses: ros-tooling/action-ros-ci@0.0.17
         with:
           package-name: rmw_iceoryx_cpp iceoryx_ros2_bridge
+          source-ros-binary-installation: foxy
           vcs-repo-file-url: |
             https://gist.githubusercontent.com/Karsten1987/1723f219bb5aa5b81355c7eb1477f867/raw/9dc4d877f6fd0f862070516febdbddea28723b5c/iceoryx.repos
