use foxy gh actions on foxy branch (#36)
* use foxy gh actions on foxy branch

Signed-off-by: Karsten Knese <karsten.knese@us.bosch.com>

* use ubuntu 20.04 for foxy distro

Signed-off-by: Karsten Knese <karsten.knese@us.bosch.com>

* remove ros2 repos file

Signed-off-by: Karsten Knese <karsten.knese@us.bosch.com>

* source-ros-binary-installation

Signed-off-by: Karsten Knese <karsten.knese@us.bosch.com>

* disable unknownMacro cppcheck

Signed-off-by: Karsten Knese <karsten.knese@us.bosch.com>

* Update iceoryx_ros2_bridge/src/generic_subscription.hpp

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Integration build rmw_iceoryx
 on:
   push:
     branches:
-      - master
+      - foxy
   pull_request:
   schedule:
     - cron: '0 3 * * *'
@@ -14,16 +14,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          os: [ubuntu-18.04]
+          os: [ubuntu-20.04]
     steps:
       - name: Setup ROS
         uses: ros-tooling/setup-ros@0.0.23
+        with:
+          required-ros-distributions: foxy
       - name: Install Iceoryx Dependencies
         run: sudo apt-get update && sudo apt-get install -y cmake libacl1-dev libncurses5-dev pkg-config
       - name: Build & Test
-        uses: ros-tooling/action-ros-ci@master
+        uses: ros-tooling/action-ros-ci@0.0.17
         with:
           package-name: rmw_iceoryx_cpp iceoryx_ros2_bridge
+          source-ros-binary-installation: foxy
           vcs-repo-file-url: |
             https://gist.githubusercontent.com/Karsten1987/1723f219bb5aa5b81355c7eb1477f867/raw/9dc4d877f6fd0f862070516febdbddea28723b5c/iceoryx.repos
-            https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos
