#48 Remove additional repos file as iceoryx is now available in upstream ROS 2
Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,11 @@ jobs:
       - name: Setup ROS
         uses: ros-tooling/setup-ros@master
         with:
-          required-ros-distributions: foxy
+          required-ros-distributions: rolling
       - name: Install Iceoryx Dependencies
         run: sudo apt-get update && sudo apt-get install -y cmake libacl1-dev libncurses5-dev pkg-config
       - name: Build & Test
         uses: ros-tooling/action-ros-ci@master
         with:
           package-name: rmw_iceoryx_cpp iceoryx_ros2_bridge
-          target-ros2-distro: foxy
+          target-ros2-distro: rolling
