Update rmw_iceoryx for galactic (#54)
* #48 Remove additional repos file as iceoryx is now available in upstream ROS 2

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* #48 Adhere rmw_iceoryx to galactic APIs

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* #48 Remove iceoryx packages from CI build and let colcon find the dependecy

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* #48 Wrap get_message_typesupport_handle(), remove duplicate error handling and reset error

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* #48 Add empty implementations for new rmw galactic API calls

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* #48 Update copyright info in headers

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* #48 Try to fix CI build

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* #48 Remove empty line in license header

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* #48 Add missing include for std::pair

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Integration build rmw_iceoryx
 on:
   push:
     branches:
-      - foxy
+      - galactic
   pull_request:
 
 jobs:
@@ -18,13 +18,11 @@ jobs:
       - name: Setup ROS
         uses: ros-tooling/setup-ros@master
         with:
-          required-ros-distributions: foxy
+          required-ros-distributions: galactic
       - name: Install Iceoryx Dependencies
         run: sudo apt-get update && sudo apt-get install -y cmake libacl1-dev libncurses5-dev pkg-config
       - name: Build & Test
         uses: ros-tooling/action-ros-ci@master
         with:
           package-name: rmw_iceoryx_cpp iceoryx_ros2_bridge
-          target-ros2-distro: foxy
-          vcs-repo-file-url: |
-            ./.github/workflows/additional_repos.repos
+          target-ros2-distro: galactic
