Update `master` in rmw_iceoryx for rolling (#55)
* Refactor the code with cpp api for iceoryx release Almond(1.0.1). (#42)

* 1. Refactor code with cpp api, alter the interface for iceoryx 1.0.0.
2. Refactor iceoryx_ros2_bridge code left with a listener-adding work to do.
3. Update the workflow description file according to the work in master branch.
4. (done)Leaving waitset function to be done.
5. (done )Leaving listener function issue#707 to be solved by iceoryx team.
6. (commented the error msg)Remain waitset error msgs to debug.
7. (commented the error msg)Remain some other todo tags to be done.

Signed-off-by: VictorLee <lzs_1993@qq.com>

* Rework changes from ZhenshengLee

* Fix by-copy capture in lambda
* Fix ChunkHeader and UserPayload mixup
* Replace cxx::string usage

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>
Co-authored-by: Johannes Jeising <Johannes.Jeising@de.bosch.com>

* Remove unnecessary casts

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Remove dummy receiver in rmw_wait_set and IceoryxWaitSet wrapper class

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Add SubscriberOptions to introspection subscriber

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Remove gcc warnings

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Replace IceoryxGuardCondition with popo::UserTrigger

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Fix rmw_wait

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Unify todo's and add copyright header

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Add limitation table and add some more todo's

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Run ament_uncrustify over all files

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Clarify iceoryx v2.0 features

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* add support to rqt tools.

Signed-off-by: VictorLee <lzs_1993@qq.com>

* 

--- a/rmw_iceoryx_cpp/CMakeLists.txt
+++ b/rmw_iceoryx_cpp/CMakeLists.txt
@@ -57,6 +57,7 @@ add_library(rmw_iceoryx_name_conversion SHARED
   src/internal/iceoryx_name_conversion.cpp
   src/internal/iceoryx_type_info_introspection.cpp
   src/internal/iceoryx_topic_names_and_types.cpp
+  src/internal/iceoryx_get_topic_endpoint_info.cpp
 )
 target_include_directories(rmw_iceoryx_name_conversion
   PUBLIC include
@@ -86,11 +87,13 @@ add_library(rmw_iceoryx_cpp SHARED
   src/rmw_guard_condition.cpp
   src/rmw_init.cpp
   src/rmw_logging.cpp
+  src/rmw_network_flow_endpoint.cpp
   src/rmw_node.cpp
   src/rmw_node_info_and_types.cpp
   src/rmw_node_names.cpp
   src/rmw_publish.cpp
   src/rmw_publisher.cpp
+  src/rmw_qos.cpp
   src/rmw_request.cpp
   src/rmw_response.cpp
   src/rmw_serialize.cpp
