change iceoryx_utils to iceoryx_hoofs
Signed-off-by: ijnek <kenjibrameld@gmail.com>

--- a/iceoryx_ros2_bridge/CMakeLists.txt
+++ b/iceoryx_ros2_bridge/CMakeLists.txt
@@ -19,7 +19,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(ament_index_cpp REQUIRED)
 find_package(iceoryx_posh REQUIRED)
-find_package(iceoryx_utils REQUIRED)
+find_package(iceoryx_hoofs REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rcpputils REQUIRED)
 find_package(rmw_iceoryx_cpp REQUIRED)
