--- a/iceoryx_ros2_bridge/package.xml
+++ b/iceoryx_ros2_bridge/package.xml
@@ -11,7 +11,7 @@
 
   <depend>ament_index_cpp</depend>
   <depend>iceoryx_posh</depend>
-  <depend>iceoryx_utils</depend>
+  <depend>iceoryx_hoofs</depend>
   <depend>rclcpp</depend>
   <depend>rcpputils</depend>
   <depend>rmw_iceoryx_cpp</depend>
