add vcs-repo-file-url to ci, such that the master version of iceory is used, and not the released version.
Signed-off-by: ijnek <kenjibrameld@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,4 @@ jobs:
         with:
           package-name: rmw_iceoryx_cpp iceoryx_ros2_bridge
           target-ros2-distro: rolling
+          vcs-repo-file-url: ./.github/workflows/custom_repos.repos
