try build dependencies from source
Signed-off-by: ijnek <kenjibrameld@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup ROS
         uses: ros-tooling/setup-ros@master
-        with:
-          required-ros-distributions: rolling
       - name: Install Iceoryx Dependencies
         run: sudo apt-get update && sudo apt-get install -y cmake libacl1-dev libncurses5-dev pkg-config
       - name: Build & Test
         uses: ros-tooling/action-ros-ci@master
         with:
           target-ros2-distro: rolling
-          vcs-repo-file-url: ${{ github.workspace }}/.github/workflows/custom_repos.repos
+          vcs-repo-file-url: |
+            https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos
+            ${{ github.workspace }}/.github/workflows/custom_repos.repos
