--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Build & Test
         uses: ros-tooling/action-ros-ci@master
         with:
+          package-name: rmw_iceoryx_cpp iceoryx_ros2_bridge
           target-ros2-distro: rolling
           vcs-repo-file-url: |
             https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos
