change iceoryx_utils to iceoryx_hoofs (#63)
* change iceoryx_utils to iceoryx_hoofs

Signed-off-by: ijnek <kenjibrameld@gmail.com>

* add vcs-repo-file-url to ci, such that the master version of iceory is used, and not the released version.

Signed-off-by: ijnek <kenjibrameld@gmail.com>

* remove package-name from ci, such that all packages get built.

Signed-off-by: ijnek <kenjibrameld@gmail.com>

* Update .github/workflows/main.yml

Co-authored-by: dkroenke <dietrich.kroenke@apex.ai>
Signed-off-by: ijnek <kenjibrameld@gmail.com>

* Update .github/workflows/custom_repos.repos

Co-authored-by: dkroenke <dietrich.kroenke@apex.ai>
Signed-off-by: ijnek <kenjibrameld@gmail.com>

* Making iceoryx_posh REQUIRED, as it otherwise is really hard to debug a CMake failure.

Signed-off-by: ijnek <kenjibrameld@gmail.com>

* try build dependencies from source

Signed-off-by: ijnek <kenjibrameld@gmail.com>

* only build necessary packages

Signed-off-by: ijnek <kenjibrameld@gmail.com>

Co-authored-by: dkroenke <dietrich.kroenke@apex.ai>
Signed-off-by: xlla <xllacyx@hotmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup ROS
         uses: ros-tooling/setup-ros@master
-        with:
-          required-ros-distributions: rolling
       - name: Install Iceoryx Dependencies
         run: sudo apt-get update && sudo apt-get install -y cmake libacl1-dev libncurses5-dev pkg-config
       - name: Build & Test
@@ -26,3 +24,6 @@ jobs:
         with:
           package-name: rmw_iceoryx_cpp iceoryx_ros2_bridge
           target-ros2-distro: rolling
+          vcs-repo-file-url: |
+            https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos
+            ${{ github.workspace }}/.github/workflows/custom_repos.repos
