--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Build & Test
         uses: ros-tooling/action-ros-ci@master
         with:
-          package-name: rmw_iceoryx_cpp iceoryx_ros2_bridge
+          package-name: rmw_iceoryx_cpp
           target-ros2-distro: galactic
