--- a/rmw_iceoryx_cpp/CMakeLists.txt
+++ b/rmw_iceoryx_cpp/CMakeLists.txt
@@ -75,6 +75,7 @@ add_library(rmw_iceoryx_cpp SHARED
   src/rmw_compare_guids_equal.cpp
   src/rmw_count.cpp
   src/rmw_event.cpp
+  src/rmw_feature.cpp
   src/rmw_get_gid_for_publisher.cpp
   src/rmw_get_implementation_identifier.cpp
   src/rmw_get_serialization_format.cpp
