Use new Blueberry `v2.0.3` feature request-response and its discovery (#84)
* Implement create and destroy methods for service and client (#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Implement wrapper classes for client and server and add type introspection methods accordingly (#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Update Readme (#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Implement 'rmw_send_request', 'rmw_take_request' and 'rmw_take_response'
(#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Add fixed-size path for 'rmw_send_response' and 'rmw_take_response' (#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Create server and client abstraction (#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Fix 'is_fixed_size' for ROS 2 services (#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Properly destroy services and clients and add serialization for services
(#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Fix typo leading to a segfault (#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Attach servers and clients to waitset (#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Remove debug prints and add de-serialization to 'rmw_send_response' (#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Add missing remove-from-waitset part (#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Do not send 'request_header' over user payload (#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Properly save the sample in 'rwm_take_request' (#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Fix lost responses issue (#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Implement 'rmw_get_service_names_and_types' (#76)

Signed-off-by: Simon Hoinkis <simon.hoinkis@apex.ai>

* Format all the things (#76)

Signed-off-by: Simon 

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Integration build rmw_iceoryx
 on:
   push:
     branches:
-      - master
+      - humble
   pull_request:
 
 jobs:
@@ -12,18 +12,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          os: [ubuntu-20.04]
+          os: [ubuntu-22.04]
     steps:
       - uses: actions/checkout@v2
       - name: Setup ROS
         uses: ros-tooling/setup-ros@master
+        with:
+          required-ros-distributions: humble
       - name: Install Iceoryx Dependencies
         run: sudo apt-get update && sudo apt-get install -y cmake libacl1-dev libncurses5-dev pkg-config
       - name: Build & Test
         uses: ros-tooling/action-ros-ci@master
         with:
           package-name: rmw_iceoryx_cpp
-          target-ros2-distro: rolling
-          vcs-repo-file-url: |
-            https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos
-            ${{ github.workspace }}/.github/workflows/custom_repos.repos
+          target-ros2-distro: humble
